--- a/vault-DCLXXXIV-sigils.css
+++ b/vault-DCLXXXIV-sigils.css
@@ -9,6 +9,10 @@
     font-style: italic;}
 
 @font-face {
+    font-family: "2000 Bastarda";
+    src: url("https://db.onlinewebfonts.com/t/6bae89903d33c1170660723215388fab.woff2")format("woff2");}
+
+@font-face {
     font-family: "Rotunda Lyon";
     src: url("https://db.onlinewebfonts.com/t/26e04e60410e72b6d1ee0be5aa8bbdba.woff2")format("woff2");}
 
