--- a/vault-DCLXXXIV-sigils.css
+++ b/vault-DCLXXXIV-sigils.css
@@ -1,4 +1,8 @@
 @font-face {
+    font-family: "Possum Saltare";
+    src: url("https://db.onlinewebfonts.com/t/9da18337662a240bc1e61604efc0fef4.woff2")format("woff2");}
+
+@font-face {
     font-family: "AldeManuce";
     src: url("https://db.onlinewebfonts.com/t/8fcba25cad7e455d9c900464ec6e7fe3.woff2")format("woff2");
     font-style: normal;}
@@ -57,10 +61,6 @@
 @font-face { 
   font-family: 'Old Claude SC'; 
   src: url('fonts/Old Claude W01 ExpertLP.woff2')format('woff2');}
-
-@font-face {
-        font-family: "Lava";
-        src: url("https://db.onlinewebfonts.com/t/8c6538635205ee5ae73c6ecc30cfb3b2.woff2")format("woff2");}
     
     @font-face {
         font-family: "LT Novelty";
@@ -190,12 +190,7 @@
 
     @font-face {
         font-family: "Sorbonne";
-        src: url("https://db.onlinewebfonts.com/t/fd31d1d7ad7f816920a6c9f67f87d8d8.eot");
-        src: url("https://db.onlinewebfonts.com/t/fd31d1d7ad7f816920a6c9f67f87d8d8.eot?#iefix")format("embedded-opentype"),
-        url("https://db.onlinewebfonts.com/t/fd31d1d7ad7f816920a6c9f67f87d8d8.woff2")format("woff2"),
-        url("https://db.onlinewebfonts.com/t/fd31d1d7ad7f816920a6c9f67f87d8d8.woff")format("woff"),
-        url("https://db.onlinewebfonts.com/t/fd31d1d7ad7f816920a6c9f67f87d8d8.ttf")format("truetype"),
-        url("https://db.onlinewebfonts.com/t/fd31d1d7ad7f816920a6c9f67f87d8d8.svg#F1470 Sorbonne W00 Normal")format("svg");}
+        src: url("https://db.onlinewebfonts.com/t/fd31d1d7ad7f816920a6c9f67f87d8d8.woff2")format("woff2");}
 
     @font-face {
         font-family: "Operina Romano";
